--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "tsx": "^4.19.0"
   },
   "dependencies": {
-    "node": "^22.7.0"
+    "node": "^22.7.0",
+    "rusty-enum": "^0.2.4"
   }
 }
