--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript-eslint": "^8.6.0"
   },
   "dependencies": {
+    "@stylistic/eslint-plugin": "^2.8.0",
     "common-js": "^0.3.8",
     "node": "^22.7.0"
   }
